# tree-processing-starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
treeprocessor/: pyproject.toml
treeprocessor/example-dir/: fileone
treeprocessor/example-dir/nested-dir/: filetwo
treeprocessor/treeprocessor/: analyze.py  filesystem.py  main.py
writing/: reflection.md
