[tool.poetry]
name = "treeprocessor"
version = "0.2.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.scripts]
treeprocessor = "treeprocessor.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.9.0"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
taskipy = "^1.8.1"
mypy = "^0.910"
pymarkdownlnt = "^0.9.8"
symbex = "^1.4"
mdtoc = "^1.3"
ruff = "^0.11.5"

[tool.taskipy.variables]
project = "treeprocessor"
tests = "tests"
readme = "../README.md"
reflection = "../writing/reflection.md"
check-command = { var = "ruff check {project}", recursive = true }
fixformat-command = { var = "ruff format {project}", recursive = true }
format-command = { var = "ruff format --check {project}", recursive = true }
markdownlint-command = { var = "poetry run pymarkdown --config .pymarkdown.cfg scan {readme} {reflection}", recursive = true }
mypy-command = {var = "mypy {project}", recursive = true}
symbex-typed-command = {var = "symbex -s --untyped -d {project} --check", recursive = true}
symbex-documented-command = {var = "symbex -s --undocumented -d {project} --check", recursive = true}

[tool.taskipy.tasks]
all = "task format && task lint && task test && task coverage"
lint = "task format && task mypy && task symbex && task markdownlint"
symbex = "task symbex-typed && task symbex-documented"
check = { cmd = "{check-command}", help = "Run the ruff linting checks", use_vars = true }
format = { cmd = "{format-command}", help = "Run the ruff formatter on source code", use_vars = true }
format-fix = { cmd = "{fixformat-command}", help = "Run the ruff formatter to fix source code", use_vars = true}
markdownlint = { cmd = "{markdownlint-command}", help = "Run the markdown linter on text files", use_vars = true }
mypy = { cmd = "{mypy-command}", help = "Run the mypy type checks to find potential type errors", use_vars = true }
symbex-typed = { cmd = "{symbex-typed-command}", help = "Run symbex for fully typed functions", use_vars = true }
symbex-documented = { cmd = "{symbex-documented-command}", help = "Run symbex for documentation", use_vars = true }
mdtoc-readme = { cmd = "mdtoc ../README.md", help = "Generate the TOC for the README" }
mdtoc-reflection = { cmd = "mdtoc ../writing/reflection.md", help = "Generate the TOC for the reflection" }

[tool.ruff]
line-length = 79
ignore = [
    "E501", # do not check line length
    "E731", # do not assign lambda expression
]
select = [
    "E",    # pycodestyle errors
    "I",    # isort
    "F",    # Pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
]

[tool.isort]
include_trailing_comma = true
force_single_line = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
